--- a/client/package.json
+++ b/client/package.json
@@ -5,16 +5,20 @@
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@material-ui/core": "^4.12.4",
     "@mui/material": "^5.8.4",
     "@mui/styled-engine-sc": "^5.8.0",
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
+    "material-table": "^2.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-double-scrollbar": "^0.0.15",
     "react-google-recaptcha": "^2.1.0",
+    "react-icons": "^4.4.0",
+    "react-modal": "^3.15.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "request": "^2.88.2",
@@ -44,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/react": "^13.3.0"
   }
 }
